<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <EditText
        android:id="@+id/et_image_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="..." />

    <ImageView
        android:layout_width= "200dp"
        android:layout_height="200dp"
        android:id="@+id/iv_farmer"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"/>

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/farmer_gender"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender_male"
            android:layout_marginLeft="@dimen/breathing"
            android:checked="true" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender_female"
            android:layout_marginLeft="@dimen/breathing"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_id_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_id_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/id_type"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioButton
            android:id="@+id/license"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/driver_licence"
            android:layout_marginLeft="@dimen/breathing"/>

        <RadioButton
            android:id="@+id/voters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voter"
            android:layout_marginLeft="@dimen/breathing"
            android:checked="true" />

        <RadioButton
            android:id="@+id/national_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/national_id"
            android:layout_marginLeft="@dimen/breathing"/>

    </RadioGroup>

    <EditText
        android:id="@+id/id_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/id_number"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/phone_example"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/acres"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="numberSigned"
        android:hint="@string/acres"/>


    <EditText
        android:id="@+id/seeds"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/seeds"/>

    <EditText
        android:id="@+id/pesticide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/pesticide"/>

    <EditText
        android:id="@+id/sprayers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:hint="@string/sprayers"/>

    <EditText
        android:id="@+id/fertilizers"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/fertilizers"/>

    <EditText
        android:id="@+id/cotton"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/cotton"/>

    <EditText
        android:id="@+id/comments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/comments"
        android:inputType="textMultiLine"/>

    <carbon.widget.Button
        android:id="@+id/farmer_create_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick=""
        android:text="@string/submit"
        android:capitalize="characters"
        android:layout_marginTop="10dp" />

</LinearLayout>

</ScrollView>
