<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_district"
            android:layout_width="200dp"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"
            android:hint="@string/hint_district"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_division"
            android:layout_below="@id/et_district"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_division"
            android:layout_width="200dp"
            android:layout_below="@id/et_district"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:id="@+id/tv_ward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ward"
            android:layout_marginTop="8dp"
            android:layout_below="@id/et_division"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_ward"
            android:layout_below="@id/et_division"
            android:layout_width="200dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_village"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_ward"
            android:text="@string/text_village"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_village"
            android:layout_below="@id/et_ward"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/tv_hamlet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hamlet"
            android:layout_marginTop="8dp"
            android:layout_below="@id/et_village"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/et_hamlet"
            android:layout_below="@id/et_village"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />

    </RelativeLayout>
</ScrollView>
